--- a/healthlink.html
+++ b/healthlink.html
@@ -104,21 +104,21 @@
                     <option value="pediatrics">Pediatrics(குழந்தை மருத்துவம்)</option>
                     <option value="ophthalmology">Ophthalmology (Eye Care-கண் மருத்துவம்)</option>
                     <option value="dermatology">Dermatology (Skin Care-தோல் மருத்துவம்)</option>
-                    <option value="orthopedics">Orthopedics (Bone & Joint Care)</option>
-                    <option value="cardiology">Cardiology (Heart Care)</option>
-                    <option value="neurology">Neurology (Brain & Nervous System)</option>
+                    <option value="orthopedics">Orthopedics (Bone & Joint Care-எலும்பு மற்றும் மூட்டுச் சிகிச்சை)</option>
+                    <option value="cardiology">Cardiology (Heart Care-இதய சிகிச்சை)</option>
+                    <option value="neurology">Neurology (Brain & Nervous System-மூளை மற்றும் நரம்பு அமைப்பு)</option>
                     <option value="ent">ENT (Ear, Nose, Throat)</option>
                     <option value="dentistry">Dentistry</option>
                     <option value="physiotherapy">Physiotherapy & Rehabilitation</option>
-                    <option value="psychiatry">Psychiatry (Mental Health)</option>
+                    <option value="psychiatry">Psychiatry (Mental Health-மன நலம்)</option>
                     <option value="radiology">Radiology</option>
-                    <option value="oncology">Oncology (Cancer Treatment)</option>
+                    <option value="oncology">Oncology (Cancer Treatment-புற்றுநோய் சிகிச்சை)</option>
                     <option value="urology">Urology</option>
-                    <option value="nephrology">Nephrology (Kidney Care)</option>
-                    <option value="endocrinology">Endocrinology (Diabetes & Hormones)</option>
-                    <option value="gastroenterology">Gastroenterology (Digestive System)</option>
-                    <option value="pulmonology">Pulmonology (Lungs & Respiratory)</option>
-                    <option value="rheumatology">Rheumatology (Arthritis & Autoimmune Diseases)</option>
+                    <option value="nephrology">Nephrology (Kidney Care-சிறுநீரக பராமரிப்பு)</option>
+                    <option value="endocrinology">Endocrinology (Diabetes & Hormones-சர்க்கரை நோய் மற்றும் ஹார்மோன்கள்)</option>
+                    <option value="gastroenterology">Gastroenterology (Digestive System-செரிமான அமைப்பு)</option>
+                    <option value="pulmonology">Pulmonology (Lungs & Respiratory-நுரையீரல் மற்றும் சுவாச அமைப்பு)</option>
+                    <option value="rheumatology">Rheumatology (Arthritis & Autoimmune Diseases-மூட்டுவலி மற்றும் தானியங்கித் தொற்றுநோய்கள்)</option>
                     <option value="vascular">Vascular Surgery</option>
                     <option value="plastic_surgery">Plastic & Reconstructive Surgery</option>
                     <option value="infectious_diseases">Infectious Diseases</option>
