--- a/DOC login.html
+++ b/DOC login.html
@@ -3,99 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOCTORS Login</title>
-    <link rel="stylesheet" href="DOC login.css">
-<style>
-    body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-}
-
-.login-container {
-    width: 300px;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-
-.login-container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-.form-group input[type="text"], 
-.form-group input[type="tel"], 
-.form-group input[type="password"] {
-    width: 100%;
-    height: 40px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-.forgot-password {
-    text-align: right;
-    margin-bottom: 10px;
-}
-
-.forgot-password a {
-    text-decoration: none;
-    color: #4CAF50;
-}
-
-.forgot-password a:hover {
-    color: #3e8e41;
-}
-
-input[type="submit"] {
-    width: 100%;
-    height: 40px;
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover {
-    background-color: #3e8e41;
-}
-
-</style>
+    <title>Doctor Login Page</title>
 </head>
-<body>
-    <div class="login-container">
-        <h2>DOCTORS Login</h2>
-        <form id="login-form">
-            <div class="form-group">
-                <label for="doctorName">Doctor's Name:</label>
-                <input type="text" id="doctorName" name="doctorName" required>
-            </div>
-            <div class="form-group">
-                <label for="mobileNumber">Mobile Number:</label>
-                <input type="tel" id="mobileNumber" name="mobileNumber" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="forgot-password">
-                <a href="#">Forgot Password?</a>
-            </div>
-            <input type="submit" value="LOGIN">
-        </form>
+<body style="margin: 0; overflow: hidden; font-family: Arial, sans-serif; display: flex; align-items: center; justify-content: center; height: 100vh;">
+    <div id="background" style="position: fixed; width: 100vw; height: 100vh; background: linear-gradient(135deg, #4e54c8, #8f94fb); overflow: hidden; display: flex; align-items: center; justify-content: center;">
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://source.unsplash.com/1600x900/?mountains,night') no-repeat center center/cover; opacity: 0.5;"></div>
     </div>
+    
+    <div id="login-container" style="position: relative; z-index: 2; background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 10px; backdrop-filter: blur(10px); text-align: center; width: 300px; box-shadow: 0 0 15px rgba(255, 255, 255, 0.2); display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <h2 style="color: white; margin-bottom: 20px;">DOCTOR LOGIN</h2>
+        <input type="text" placeholder="Name" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <input type="text" placeholder="Mobile Number" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <input type="password" placeholder="Password" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <div style="display: flex; justify-content: space-between; color: white; font-size: 12px; width: 100%;">
+            <a href="#" style="color: white; text-decoration: none;">Forgot Password?</a>
+        </div>
+        <button onclick="animateLogin()" style="width: 100%; padding: 10px; margin-top: 15px; background: #6a11cb; border: none; border-radius: 5px; color: white; cursor: pointer;">LOGIN</button>
+    </div>
+
+    <script>
+        function animateLogin() {
+            let loginBox = document.getElementById('login-container');
+            loginBox.style.transform = 'scale(1.1)';
+            setTimeout(() => loginBox.style.transform = 'scale(1)', 300);
+        }
+    </script>
 </body>
 </html>
