--- a/DOC login.html
+++ b/DOC login.html
@@ -3,29 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Login Page</title>
+    <title>Doctor Sign-Up</title>
 </head>
 <body style="margin: 0; overflow: hidden; font-family: Arial, sans-serif; display: flex; align-items: center; justify-content: center; height: 100vh;">
     <div id="background" style="position: fixed; width: 100vw; height: 100vh; background: linear-gradient(135deg, #4e54c8, #8f94fb); overflow: hidden; display: flex; align-items: center; justify-content: center;">
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://source.unsplash.com/1600x900/?mountains,night') no-repeat center center/cover; opacity: 0.5;"></div>
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://source.unsplash.com/1600x900/?hospital,doctor') no-repeat center center/cover; opacity: 0.5;"></div>
     </div>
     
-    <div id="login-container" style="position: relative; z-index: 2; background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 10px; backdrop-filter: blur(10px); text-align: center; width: 300px; box-shadow: 0 0 15px rgba(255, 255, 255, 0.2); display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <h2 style="color: white; margin-bottom: 20px;">DOCTOR LOGIN</h2>
+    <div id="signup-container" style="position: relative; z-index: 2; background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 10px; backdrop-filter: blur(10px); text-align: center; width: 350px; box-shadow: 0 0 15px rgba(255, 255, 255, 0.2); display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <h2 style="color: white; margin-bottom: 20px;">DOCTOR SIGNUP</h2>
         <input type="text" placeholder="Name" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <input type="text" placeholder="Mobile Number" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <input type="password" placeholder="Password" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <div style="display: flex; justify-content: space-between; color: white; font-size: 12px; width: 100%;">
-            <a href="#" style="color: white; text-decoration: none;">Forgot Password?</a>
-        </div>
-        <button onclick="animateLogin()" style="width: 100%; padding: 10px; margin-top: 15px; background: #6a11cb; border: none; border-radius: 5px; color: white; cursor: pointer;">LOGIN</button>
+        <input type="text" placeholder="Age" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <input type="text" placeholder="Specialization" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <input type="text" placeholder="Clinic/Hospital Name" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <input type="text" placeholder="Clinic/Hospital Address" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <input type="text" placeholder="Contact Number" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <label style="color: white; margin: 10px 0;">Doctor License:</label>
+        <input type="file" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none; background: white;">
+        <input type="password" placeholder="Create Password" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
+        <button onclick="animateSignup()" style="width: 100%; padding: 10px; margin-top: 15px; background: #6a11cb; border: none; border-radius: 5px; color: white; cursor: pointer;">SIGNUP</button>
+        <p style="color: white; margin-top: 10px; font-size: 12px;">Already signed up? <a href="#" style="color: white; text-decoration: none;">Login</a></p>
     </div>
 
     <script>
-        function animateLogin() {
-            let loginBox = document.getElementById('login-container');
-            loginBox.style.transform = 'scale(1.1)';
-            setTimeout(() => loginBox.style.transform = 'scale(1)', 300);
+        function animateSignup() {
+            let signupBox = document.getElementById('signup-container');
+            signupBox.style.transform = 'scale(1.1)';
+            setTimeout(() => signupBox.style.transform = 'scale(1)', 300);
         }
     </script>
 </body>
