--- a/DOC login.html
+++ b/DOC login.html
@@ -4,25 +4,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Sign-Up</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #4a90e2, #a1c4fd);
+            position: relative;
+        }
+
+        /* Background animation */
+        .floating-icons {
+            position: fixed;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        .icon {
+            position: absolute;
+            width: 50px;
+            opacity: 0.3;
+            animation: float 10s infinite linear;
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0); opacity: 0.3; }
+            50% { opacity: 0.6; }
+            100% { transform: translateY(-100vh); opacity: 0; }
+        }
+
+        #signup-container {
+            position: relative;
+            z-index: 2;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            text-align: center;
+            width: 350px;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        h2 {
+            color: white;
+            margin-bottom: 20px;
+        }
+
+        input, button {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+            outline: none;
+        }
+
+        button {
+            background: #6a11cb;
+            color: white;
+            cursor: pointer;
+        }
+
+        p {
+            color: white;
+            margin-top: 10px;
+            font-size: 12px;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+        }
+    </style>
 </head>
-<body style="margin: 0; overflow: hidden; font-family: Arial, sans-serif; display: flex; align-items: center; justify-content: center; height: 100vh;">
-    <div id="background" style="position: fixed; width: 100vw; height: 100vh; background: linear-gradient(135deg, #4e54c8, #8f94fb); overflow: hidden; display: flex; align-items: center; justify-content: center;">
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://source.unsplash.com/1600x900/?hospital,doctor') no-repeat center center/cover; opacity: 0.5;"></div>
+<body>
+
+    <!-- Floating medical icons -->
+    <div class="floating-icons">
+        <img src="https://cdn-icons-png.flaticon.com/512/2831/2831236.png" class="icon" style="left: 10%; animation-duration: 12s;">
+        <img src="https://cdn-icons-png.flaticon.com/512/2831/2831239.png" class="icon" style="left: 40%; animation-duration: 14s;">
+        <img src="https://cdn-icons-png.flaticon.com/512/2831/2831250.png" class="icon" style="left: 70%; animation-duration: 16s;">
+        <img src="https://cdn-icons-png.flaticon.com/512/2831/2831272.png" class="icon" style="left: 90%; animation-duration: 18s;">
     </div>
-    
-    <div id="signup-container" style="position: relative; z-index: 2; background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 10px; backdrop-filter: blur(10px); text-align: center; width: 350px; box-shadow: 0 0 15px rgba(255, 255, 255, 0.2); display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <h2 style="color: white; margin-bottom: 20px;">DOCTOR SIGNUP</h2>
-        <input type="text" placeholder="Name" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <input type="text" placeholder="Age" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <input type="text" placeholder="Specialization" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <input type="text" placeholder="Clinic/Hospital Name" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <input type="text" placeholder="Clinic/Hospital Address" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <input type="text" placeholder="Contact Number" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <label style="color: white; margin: 10px 0;">Doctor License:</label>
-        <input type="file" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none; background: white;">
-        <input type="password" placeholder="Create Password" style="width: 100%; padding: 10px; margin: 10px 0; border: none; border-radius: 5px; outline: none;">
-        <button onclick="animateSignup()" style="width: 100%; padding: 10px; margin-top: 15px; background: #6a11cb; border: none; border-radius: 5px; color: white; cursor: pointer;">SIGNUP</button>
-        <p style="color: white; margin-top: 10px; font-size: 12px;">Already signed up? <a href="#" style="color: white; text-decoration: none;">Login</a></p>
+
+    <div id="signup-container">
+        <h2>DOCTOR SIGNUP</h2>
+        <input type="text" placeholder="Name">
+        <input type="text" placeholder="Age">
+        <input type="text" placeholder="Specialization">
+        <input type="text" placeholder="Clinic/Hospital Name">
+        <input type="text" placeholder="Clinic/Hospital Address">
+        <input type="text" placeholder="Contact Number">
+        <label style="color: white;">Doctor License:</label>
+        <input type="file">
+        <input type="password" placeholder="Create Password">
+        <button onclick="animateSignup()">SIGNUP</button>
+        <p>Already signed up? <a href="#">Login</a></p>
     </div>
 
     <script>
@@ -32,5 +118,6 @@
             setTimeout(() => signupBox.style.transform = 'scale(1)', 300);
         }
     </script>
+
 </body>
 </html>
